# codebaseGraph

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  SECURITY.md  build.rs  pyproject.toml  release-please-config.json  requirements-dev.txt
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.scryer/: .gitignore  model.scry
assets/: architecture_queries.json  graph_schema.json  mcp_tool_specs.json  query_helpers.json
conda-forge/recipe/: meta.yaml
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: graph_output_token_comparison.md  release.md  rust_rewrite.md
rust/: Cargo.toml
rust/crates/codebase_graph_native/: Cargo.toml  build.rs
rust/crates/codebase_graph_native/src/: error.rs  ffi.rs  graph.rs  graph_rows.rs  hash.rs  ladybug.rs  ladybug_writer.rs  legacy.rs  legacy_cli.rs  lib.rs  main.rs  native_graph.rs  normalize.rs  parser.rs  partition_builder.rs  product_cli.rs  profiles.rs  protocol.rs  scan.rs  semantic_enrichment.rs  staging.rs  staging_writer.rs  syntax_materializer.rs
scripts/: benchmark_materialization.py  check_release_gate.py  compare_graph_output_tokens.py  smoke_built_wheel.py  smoke_native_artifact.py
src/: error.rs  graph_rows.rs  hash.rs  ladybug_writer.rs  lib.rs  parser.rs  partition_builder.rs  product_cli.rs  profiles.rs  protocol.rs  scan.rs  semantic_enrichment.rs  staging_writer.rs  syntax_materializer.rs
src/cli/: __init__.py  constants.rs  dispatch.rs  materialize.rs  mod.rs  reinstall.rs  setup.rs  uninstall.rs  util.rs
src/cli/format/: blocks.rs  help.rs  metadata.rs  mod.rs  schema.rs
src/cli/graph/: commands.rs  health.rs  mod.rs  options.rs  query.rs  search.rs
src/cli/install/: client.rs  command.rs  descriptor.rs  fs_util.rs  metadata.rs  mod.rs  options.rs  render.rs  state.rs  verify.rs
src/cli/mcp/: commands.rs  http.rs  mod.rs  options.rs  protocol.rs  refresh.rs  stdio.rs  tools.rs
src/cli/tests/: dispatch_materialize.rs  fixtures.rs  graph.rs  install.rs  mcp.rs  mod.rs  watch.rs
src/cli/watch/: batch.rs  command.rs  filter.rs  helpers.rs  mod.rs  native.rs  options.rs  output.rs  poll.rs  refresh.rs  snapshot.rs  types.rs
src/codebase_graph/: __init__.py  cli.py  code_map.py  context_builder.py  diagnostics.py  document_layers.py  graph_context.py  graph_core.py  ladybug.py  markdown.py  native_binary.py  ontology.py  paths.py  production.py  production_queries.py  question_query_registry.py  verification.py  version.py
src/codebase_graph/_native/: __init__.py  bulk_staging.py  graph_builder.py  materialization.py  scan_diff.py  semantic_enrichment.py  tree_sitter_normalization.py
src/codebase_graph/cli/: __init__.py
src/codebase_graph/core/: __init__.py  graph.py
src/codebase_graph/db/: __init__.py  query.py  schema.py  store.py
src/codebase_graph/extract/: __init__.py  graph_builder.py
src/codebase_graph/ingest/: __init__.py  document_parser.py  manifest_detector.py  materializer.py  tree_sitter_adapter.py  tree_sitter_parser.py
src/codebase_graph/mcp/: __init__.py  graph_commands.py  protocol.py  runtime.py  server.py  tools.py
src/codebase_graph/memory/: __init__.py
src/codebase_graph/ontology/: __init__.py  compatibility.py  ontology.py
src/codebase_graph/reasoning/: __init__.py  architecture_queries.py  context_builder.py  context_profiles.py
src/codebase_graph/retrieval/: __init__.py  block_format.py  search.py
src/codebase_graph/semantic/: __init__.py  build_context.py  call_type_resolver.py  enrichment_writer.py  providers.py  reference_resolver.py  symbol_table.py
src/codebase_graph/setup/: __init__.py  descriptor.py  installer.py  instructions.py  mcp_config.py  orchestrator.py  preflight.py  state.py
src/core/: __init__.py  graph.py
src/db/: __init__.py  schema.py  store.py
src/db_writer/: access.rs  cleanup.rs  cypher.rs  deletion.rs  extensions.rs  mod.rs  request.rs  schema.rs  tests.rs  write.rs
src/execution/: mod.rs  parallel.rs  plan.rs  run.rs  timing.rs
src/extract/: __init__.py  graph_builder.py
src/ingest/: __init__.py  materializer.py  tree_sitter_parser.py
src/ontology/: ontology.py
src/parser/: captures.rs  fields.rs  markdown.rs  mod.rs  tree_sitter.rs
src/product_cli/: dispatch.rs  format.rs  graph.rs  install.rs  materialize.rs  mcp.rs  mod.rs  setup.rs  tests.rs  util.rs  watch.rs
src/product_cli/format/: blocks.rs  help.rs  metadata.rs  mod.rs  schema.rs
src/reasoning/: __init__.py  context_builder.py
src/retrieval/: __init__.py  search.py
src/semantic_enrichment/: evidence.rs  ids.rs  metadata.rs  mod.rs  resolution.rs  state.rs  symbols.rs
src/staging_writer/: accumulator.rs  connectors.rs  files.rs  merge.rs  mod.rs  ordering.rs  result.rs  rows.rs  tests.rs
src/syntax_materializer/: arena.rs  builder.rs  capture.rs  ids.rs  mod.rs  relations.rs  tests.rs
src/tests/: __init__.py  test_graph_builder.py  test_materializer.py  test_ontology.py  test_schema.py  test_search.py
tests/: auto_repo_root.rs  test_architecture_queries.py  test_cli.py  test_diagnostics.py  test_framework_profiles.py  test_golden_graph_parity.py  test_graph_builder.py  test_graph_core.py  test_graph_output_block_format.py  test_language_profiles.py  test_manifest_detector.py  test_materializer.py  test_mcp_entrypoint.py  test_mcp_installer.py  test_mcp_portability.py  test_native_bulk_staging.py  test_native_graph_builder.py  test_native_materialization.py  test_native_semantic_enrichment.py  test_ontology.py  test_ontology_compatibility.py  test_profiled_parser_registry.py  test_question_query_registry.py  test_release_workflows.py  test_rust_rewrite_baseline.py  test_schema.py  test_search.py  test_semantic_build_context.py  test_semantic_call_type_resolver.py  test_semantic_enrichment_writer.py  test_semantic_providers.py  test_semantic_reference_resolver.py  test_semantic_symbol_table.py  test_setup_workflow.py  test_supported_language_parsing.py  test_tree_sitter_adapter.py
tests/fixtures/: golden_graph_parity.json  search_service_graph_search.json
(+73 files in other folders)
