[package]
name = "codebase-graph"
version = "0.5.0"
edition = "2021"
rust-version = "1.82"
description = "Native codebaseGraph CLI and MCP server for local code knowledge graphs."
license = "MIT"
repository = "https://github.com/rabii-chaarani/codebaseGraph"
homepage = "https://github.com/rabii-chaarani/codebaseGraph"
readme = "README.md"
keywords = ["codebase", "graph", "mcp", "cli", "analysis"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = [".", "crates/xtask"]
resolver = "2"

[lib]
name = "codebase_graph"

[dependencies]
lbug = "0.17.1"
notify = "8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tree-sitter = "0.26"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-fortran = "0.6.0"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
walkdir = "2"

[[bin]]
name = "codebase-graph"
path = "src/bin/codebase-graph.rs"
