[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-graph"
dynamic = ["version"]
description = "Generic codebase knowledge graph engine for Python projects."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rabii Chaarani" }]
dependencies = [
  "real_ladybug",
  "tomli; python_version < '3.11'",
  "tree-sitter",
  "tree-sitter-python",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
ladybug = []
parquet = ["pyarrow"]
dev = ["pytest", "ruff"]

[project.scripts]
codebase-graph = "codebase_graph.cli:main"
codebase-graph-mcp = "codebase_graph.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["codebase_graph*"]
exclude = ["tests*", "codebase_graph.egg-info*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
