[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbasegraph"
dynamic = ["version"]
description = "Generic multi-language codebase knowledge graph engine."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rabii Chaarani" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "real_ladybug>=0.15.3,<0.16",
  "tomli>=2.0.1; python_version < '3.11'",
  "tree-sitter>=0.25.2,<0.26",
  "tree-sitter-c>=0.24.2,<0.25",
  "tree-sitter-cpp>=0.23.4,<0.24",
  "tree-sitter-fortran>=0.6.0,<0.7",
  "tree-sitter-go>=0.25.0,<0.26",
  "tree-sitter-python>=0.25.0,<0.26",
  "tree-sitter-rust>=0.24.2,<0.25",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
ladybug = []
parquet = ["pyarrow"]
dev = ["pytest", "ruff", "tiktoken"]
native = ["maturin>=1,<2"]

[project.scripts]
codebase-graph = "codebase_graph.cli:main"
codebase-graph-mcp = "codebase_graph.mcp.server:main"

[project.urls]
Homepage = "https://github.com/rabii-chaarani/codebaseGraph"
Repository = "https://github.com/rabii-chaarani/codebaseGraph"
Issues = "https://github.com/rabii-chaarani/codebaseGraph/issues"
Changelog = "https://github.com/rabii-chaarani/codebaseGraph/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["codebase_graph*"]
exclude = ["tests*", "codebase_graph.egg-info*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.maturin]
manifest-path = "rust/crates/codebase_graph_native/Cargo.toml"
module-name = "codebase_graph._native._native"
python-source = "src"
features = ["python-extension"]
