[package]
name = "codebase_graph_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "codebase_graph_native"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python-extension = ["dep:pyo3"]

[dependencies]
lbug = "0.17.1"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"

[build-dependencies]
pyo3-build-config = "0.23"

[[bin]]
name = "codebase_graph_native_graph_builder"
path = "src/main.rs"
